# video-to-design-context

./: .gitignore  HANDOFF.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
src/tastepack/: __init__.py  artifacts.py  cli.py  config.py  frames.py  gemini.py  inbox_queue.py  logging.py  pdf.py  pipeline.py  providers.py  qa.py  schema.py  segments.py  timestamps.py  video.py
tastepack-data/: README.md
tests/: test_artifacts.py  test_cli.py  test_config.py  test_frames.py  test_gemini.py  test_inbox_queue.py  test_logging.py  test_pdf.py  test_pipeline.py  test_providers.py  test_qa.py  test_readme.py  test_schema.py  test_segments.py  test_timestamps.py  test_video.py
