[project]
name = "tastepack"
version = "0.1.0"
description = "Local-first design taste context pack generator from narrated screen recordings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "markdown>=3.6",
    "pydantic>=2.7.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.1",
    "reportlab>=4.2.0",
    "typer>=0.12.0",
]

[project.scripts]
tastepack = "tastepack.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tastepack"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/tastepack/cli.py" = ["B008"]
